Item909: template and css changes to remove links from form in preview, and to make the form stand apart from the topic (as the form is often hidden in custom view templates)
git-svn-id: http://svn.foswiki.org/trunk@2499 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -342,7 +342,7 @@ table.foswikiFormTable th.foswikiFormTableHRow font {
 }
 .foswikiBroadcastMessage,
 .foswikiNotification {
-   background-color:#fff0c4;
+   background-color:#fff7e1;
 }
 .foswikiNotification {
    border:2px solid #ffdf4c;
@@ -352,7 +352,7 @@ table.foswikiFormTable th.foswikiFormTableHRow font {
    border-color:#f00;
 }
 .foswikiHelp {
-   background-color:#f5fbfe;
+   background-color:#edf5fa;
    border-color:#e2e2e2;
 }
 .foswikiBroadcastMessage b,
@@ -565,8 +565,13 @@ h4.patternSearchResultsHeader {
 
 /* preview.pattern.tmpl */
 
-.foswikiPreviewArea {
+.foswikiPreviewArea,
+.patternPreviewPage .foswikiForm {
    border-color:#f00;
+   background-color:#fff;
+}
+.patternPreviewPage .foswikiForm {
+   border-color:#ccc;
    background-color:#fff;
 }
 
