--- a/core/templates/preview.tmpl
+++ b/core/templates/preview.tmpl
@@ -27,9 +27,7 @@
 %TMPL:DEF{"help"}%%TMPL:END%
 
 %TMPL:DEF{"content"}%%TMPL:P{"alert"}%%TMPL:P{"formstart"}%
-<div class="foswikiPreviewArea">
-%TEXT%
-%META{"form"}%
-</div><!--/foswikiPreviewArea-->
+<div class="foswikiPreviewArea">%TEXT%
+</div><!--/foswikiPreviewArea-->%META{"form"}%
 %TMPL:P{"topicinfo"}%
 %TMPL:P{"formend"}%%TMPL:END%
