Item1157: base tag self closing disables selecting text in IE6 We have to use the old syntax
git-svn-id: http://svn.foswiki.org/branches/Release01x00@2760 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -32,7 +32,7 @@
 	<link rel="icon" href="%FAVICON%" type="image/x-icon" /> <link rel="shortcut icon" href="%FAVICON%" type="image/x-icon" />
 	<link rel="alternate" href="%SCRIPTURL{edit}%/%BASEWEB%/%BASETOPIC%?_T=%DATE%" type="application/x-wiki" title="edit %BASETOPIC%" />
 	<meta name="description" content="%TOPIC%" />
-    <base href="%SCRIPTURL{%SCRIPTNAME%}%/%WEB%/%TOPIC%" />
+    <base href="%SCRIPTURL{%SCRIPTNAME%}%/%WEB%/%TOPIC%"></base>
 	%TMPL:P{"script"}%
 	%TMPL:P{"defaultstyle"}%
 </head>%TMPL:END%
