Item1305: improve UI for explorer
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3159 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/EditTablePlugin/pub/System/EditTablePlugin/edittable.css
+++ b/EditTablePlugin/pub/System/EditTablePlugin/edittable.css
@@ -48,14 +48,20 @@
 }
 .editTableRowSeparator {
 	background-color:#eee;
-	height:4px;
+	height:5px;
 	cursor:default;
 }
-.editTableMoveMode .editTableRowSeparator {
+.editTableRowSeparator td {
+	margin:0;
+	padding:0;
 }
+.editTableMoveMode .editTableRowSeparator {
+	background-image:url(separator_bg_anim.gif);
+}
+.editTableRowSeparatorHover,
 .editTableMoveMode .editTableRowSeparatorHover {
-	background-color:#069;
-	height:10px;
+	background:#069;
+	height:13px;
 	cursor:move;
 }
 .editTableMoveMode .editTableActionCell img {
