Item1458: further restrictions
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3479 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -60,7 +60,7 @@
 
 %TMPL:DEF{"setparent"}%#SetParent
 ---++ %MAKETEXT{"Set new topic parent"}%
-<form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1">
+<form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1" method="POST">
 <div class="foswikiFormSteps">
 <div class="foswikiFormStep">
 ---++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%SEARCH{ "^%TOPIC%$" casesensitive="on" scope="topic" regex="on" nosearch="on" nototal="on" format="$parent" }%'='NONE'" then="(none)" else='%SEARCH{ "^%TOPIC%$" scope="topic" regex="on" nosearch="on" nototal="on" format="[[$web.$parent][$parent]]" }%' }%
