Item1458: must convert the request into a POST if a valid redirect cache is present
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3512 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -18,7 +18,7 @@
 
 %TMPL:DEF{"copy"}%---++ %MAKETEXT{"Copy topic"}%
 <p>%MAKETEXT{"Copy text and form data to a new topic (no attachments will be copied though)."}%</p>
-<form action="%SCRIPTURL{manage}%/%WEB%/">
+<form action="%SCRIPTURL{manage}%/%WEB%/" method="post">
 %MAKETEXT{"Name of copy:"}% <input type="text" name="topic" class="foswikiInputField" value="%TOPIC%Copy" size="30" /> <input type="submit" class="foswikiButton" value="%MAKETEXT{"Copy topic"}%" /> <span class="foswikiGrayText">%MAKETEXT{"You will be able to review the copied topic before saving"}%</span>
 %TMPL:P{"nonwikiword"}%
 <input type="hidden" name="action" value="create" />
