--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -60,7 +60,7 @@
 <div class="foswikiLeft">
 <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%HOMETOPIC%">%WEB%</a> &gt; %META{"parent" nowebhome="on" suffix=" &gt;"}% <b>%TOPIC%</b> %TMPL:P{"titleaction"}%</div>
 <div class="foswikiRight foswikiSmall">%WIKITOOLNAME% webs: %WIKIWEBLIST% &nbsp; %TMPL:P{"login"}%</div><br class="foswikiClear" /></div>
-<form name="main" action="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%">
+<form name="main" action="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%" method="POST">
 %TMPL:P{"webaction"}%</form></div>%TMPL:END%
 
 %TMPL:DEF{"simpleheader"}%
