Item1458: topic preference edits require a post to manage
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3517 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -11,7 +11,7 @@
 
 
 %TMPL:DEF{"settings"}%---++ %MAKETEXT{"Edit topic preference settings"}%
-   * %MAKETEXT{"<a href='[_1]' rel='nofollow'>Edit settings</a> for this topic" args="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%?action=editSettings"}%
+   * <form action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="POST"><input type="submit" value="%MAKETEXT{"Edit settings for this topic"}%" /> <input type="hidden" name="action" value="editSettings" /></form>
 %TMPL:END%
 
 
