Item1458: Don't allow save from get Since we need to use a method='post' and therefore a submit button for the "Edit settings for this topic" we may as well style it like the other buttons. Otherwise we end up with two types of buttons and text links. At least with this change we only have buttons or text which is not too bad.
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3553 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -11,7 +11,7 @@
 
 
 %TMPL:DEF{"settings"}%---++ %MAKETEXT{"Edit topic preference settings"}%
-   * <form action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="POST"><input type="submit" value="%MAKETEXT{"Edit settings for this topic"}%" /> <input type="hidden" name="action" value="editSettings" /></form>
+   * <form action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="POST"><input type="submit" value="%MAKETEXT{"Edit settings for this topic"}%" class='foswikiButton'/> <input type="hidden" name="action" value="editSettings" /></form>
 %TMPL:END%
 
 
