Item1469: You cannot verify registration by clicking as instructed on the link in the email after the register blocks GET Earlier I reverted the complete block of GET with script register. I have now re-applied the block but excepted the method verify. This way all is blocked except the verification of registration via email link. That open entry should be harmless. I added a new string in the messages. Since it is a geek error message normal people should never see it does no harm. We already have similar error messages hardcoded in the perl code. I added the new string to all the locale files. And I translated those I could myself or with help from people available.
git-svn-id: http://svn.foswiki.org/trunk@3561 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -417,6 +417,10 @@
 (%MAKETEXT{"don't forget to check your Topic Settings"}%)
 %TMPL:END%
 
+%TMPL:DEF{post_method_only}%
+%MAKETEXT{"The =[_1]= script can only be called with POST method." args="%PARAM1%"}%
+%TMPL:END%
+
 %TMPL:DEF{bad_script_parameters}%
 %MAKETEXT{"Incorrect parameters to the =[_1]= script" args="%PARAM1%"}%
 
