--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.autocomplete.css
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.autocomplete.css
@@ -19,6 +19,7 @@
 	padding: 2px 5px;
 	cursor: default;
 	display: block;
+        text-align: left;
 	/* 
 	if width will be 100% horizontal scrollbar will apear 
 	when scroll mode will be used
