--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.twiki.css
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.twiki.css
@@ -1,4 +1,6 @@
 /* buttons */
+.foswikiTopic a.jqButton,
+.foswikiTopic a.jqButton:hover,
 .patternTopic a.jqButton,
 .patternTopic a.jqButton:hover,
 .jqButton:hover,
@@ -17,6 +19,8 @@
   color:black;
   font-size:13px;
 }
+.foswikiTopic a.jqButton:link:hover,
+.foswikiTopic a.jqButton:hover,
 .patternTopic a.jqButton:link:hover,
 .patternTopic a.jqButton:hover,
 .jqButton:hover {
@@ -152,4 +156,48 @@
   height: 16px;
   width: 16px;
   display: block;
+}
+
+/* jquery.simplemodal */
+#simplemodal-container {
+  background-color:#fff;
+  border:3px solid #ccc;
+  text-align:left;
+}
+.simplemodal-data {
+  margin:1em;
+  height:auto;
+  width:auto;
+}
+#simplemodal-overlay {
+  background-color:transparent;
+  background-image:url(opacity40.png);
+  cursor:wait;
+  opacity:1.0 !important;
+}
+a.simplemodal-close {
+  width:25px;
+  height:29px;
+  display:inline;
+  z-index:3200;
+  position:absolute;
+  top:-14px;
+  right:-18px;
+  cursor:pointer;
+}
+a:hover.simplemodal-close,
+a.simplemodal-close {
+  background:url(x.png) no-repeat;
+}
+/* ie 6 hack */
+* html #simplemodal-container a.modalCloseImg {
+  background:none;
+  right:-14px;
+  width:22px;
+  height:26px;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/pub/TWiki/JQueryPlugin/x.png',sizingMethod='scale');
+}
+* html #simplemodal-overlay {
+  background:#000;
+  opacity:0.4;
 }
