--- a/PatternSkin/templates/renamebase.pattern.tmpl
+++ b/PatternSkin/templates/renamebase.pattern.tmpl
@@ -26,6 +26,7 @@
 <div class="foswikiFormStep">%TMPL:P{"changefrom"}%</div><!-- /foswikiFormStep-->
 <div class="foswikiFormStep">%TMPL:P{"toweb"}%</div><!-- /foswikiFormStep-->
 <div class="foswikiFormStep foswikiLast">%TMPL:P{"totopic"}%</div><!-- /foswikiFormStep-->
+<div class="foswikiFormStep foswikiLast">%TMPL:P{"toattachment"}%</div><!-- /foswikiFormStep-->
 %TMPL:P{"searchresultsstep"}%</div><!-- /foswikiFormSteps-->%TMPL:END%
 
 
