--- a/core/templates/rename.tmpl
+++ b/core/templates/rename.tmpl
@@ -9,6 +9,8 @@
 %TMPL:DEF{"newwebhelp"}%%TMPL:END%
 
 
+%TMPL:DEF{"newattachment"}%<input name="newattachment" class="foswikiInputField" value="%NEW_FILENAME%" size="36" />%TMPL:END%
+
 %TMPL:DEF{"newtopic"}%<input name="newtopic" class="foswikiInputField" value="%NEW_TOPIC%" size="36" /><br />
 %TMPL:P{"nonwikiword"}%%TMPL:END%
 
