--- a/core/templates/renameconfirm.tmpl
+++ b/core/templates/renameconfirm.tmpl
@@ -13,8 +13,13 @@
 %TMPL:DEF{"totopictitle"}%---+++ %MAKETEXT{"To topic:"}% <nop>%NEW_TOPIC%
 <input type="hidden" name="newtopic" value="%NEW_TOPIC%" />%TMPL:P{"nonwikiwordallowed"}%%TMPL:END%
 
+%TMPL:DEF{"toattachmenttitle"}%---+++ %MAKETEXT{"To attachment:"}% <nop>%NEW_TOPIC%
+<input type="hidden" name="newattachment" value="%NEW_TOPIC%" />%TMPL:P{"nonwikiwordallowed"}%%TMPL:END%
+
 
 %TMPL:DEF{"movewebhelp"}%%TMPL:END%
+
+%TMPL:DEF{"newattachment"}%%TMPL:END%
 
 %TMPL:DEF{"newtopic"}%%TMPL:END%
 
