--- a/core/templates/renamewebbase.tmpl
+++ b/core/templates/renamewebbase.tmpl
@@ -9,8 +9,9 @@
 %TMPL:DEF{"parentwebtitle"}%---+++ %MAKETEXT{"New parent web:"}%%TMPL:END%
 
 
-%TMPL:DEF{"newtopic"}%%TMPL:END%
+%TMPL:DEF{"newattachment"}%%TMPL:END%
 
+%TMPL:DEF{"newtopic"}%%TMPL:END%
 
 %TMPL:DEF{"newweb"}%%TMPL:P{"newparentweb"}%.%TMPL:P{"newsubweb"}%%TMPL:END%
 
