--- a/PatternSkin/templates/renameattachmentdelete.pattern.tmpl
+++ b/PatternSkin/templates/renameattachmentdelete.pattern.tmpl
@@ -29,17 +29,18 @@
 
 
 
-%TMPL:DEF{"totopictitle"}%---+++ %MAKETEXT{"Optionally enter a different topic name:" args="<nop>%URLPARAM{web}%"}%%TMPL:END%
+%TMPL:DEF{"totopictitle"}%---+++ %MAKETEXT{"Optionally enter a different topic name:"}%%TMPL:END%
+
+%TMPL:DEF{"toattachmenttitle"}%---+++ %MAKETEXT{"Optionally enter a different attachment name:"}%%TMPL:END%
+
+%TMPL:DEF{"newattachment"}%<p><input name="newattachment" class="foswikiInputField" value="%NEW_FILENAME%" size="36" /><input type="hidden" name="attachment" value="%FILENAME%" /></p>%TMPL:P{"attachmenthelp"}%%TMPL:END%
+
+%TMPL:DEF{"newtopic"}%<p><input name="newtopic" class="foswikiInputField" value="%URLPARAM{"newtopic" default="TrashAttachment"}%" size="36" /><input type="hidden" name="nonwikiword" value="on" /></p>%TMPL:P{"namehelp"}%%TMPL:END%
 
 
+%TMPL:DEF{"namehelp"}%<p>%MAKETEXT{"[_1] is the default topic for deleted attachments." args="[[%TRASHWEB%.TrashAttachment][TrashAttachment]]"}% %MAKETEXT{"If you enter a different name, make sure the topic exists."}%</p>%TMPL:END%
 
-%TMPL:DEF{"newtopic"}%<p><input name="newtopic" class="foswikiInputField" value="TrashAttachment" size="36" /><input type="hidden" name="nonwikiword" value="on" /></p>%TMPL:P{"namehelp"}%<input type="hidden" name="attachment" value="%FILENAME%" />%TMPL:END%
-
-
-
-%TMPL:DEF{"namehelp"}%<p>%MAKETEXT{"[_1] is the default topic for deleted attachments." args="[[%TRASHWEB%.TrashAttachment][TrashAttachment]]"}% %MAKETEXT{"If you enter a different name, make sure the topic does  exist."}%</p>%TMPL:END%
-
-
+%TMPL:DEF{"attachmenthelp"}%<p>%MAKETEXT{"The attachment may have to be renamed if an attachment called '%FILENAME%' already exists in the target topic."}%</p>%TMPL:END%
 
 %TMPL:DEF{"toolbar"}%%TMPL:END%
 %TMPL:DEF{"pagehelp"}%%TMPL:END%
