--- a/core/templates/renamedelete.tmpl
+++ b/core/templates/renamedelete.tmpl
@@ -17,8 +17,12 @@
 
 %TMPL:DEF{"totopictitle"}%---+++ %MAKETEXT{"Optionally change topic name:"}%%TMPL:END%
 
+%TMPL:DEF{"toattachmenttitle"}%---+++ %MAKETEXT{"Optionally change attachment name:"}%%TMPL:END%
+
 
 %TMPL:DEF{"newtopic"}%<p><input name="newtopic" class="foswikiInputField" value="%NEW_TOPIC%" size="36" /> %TMPL:P{"namehelp"}%</p>%TMPL:P{"nonwikiword"}% %TMPL:END%
+
+%TMPL:DEF{"newattachment"}%<p><input name="newattachment" class="foswikiInputField" value="%NEW_FILENAME%" size="36" /> %TMPL:P{"namehelp"}%</p>%TMPL:END%
 
 
 %TMPL:DEF{"namehelp"}%<span>%MAKETEXT{"This name has been chosen so it doesn't conflict with any other topics already in the [_1] web." args="%NEW_WEB%"}%</span>%TMPL:END%
