--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -104,9 +104,7 @@
 
 %TMPL:DEF{"login_actions"}%%IF{"context authenticated" then='<strong>%MAKETEXT{"Hello [_1]!" args="[[%WIKIUSERNAME%][%SPACEOUT{%WIKINAME%}%]]"}%</strong> %LOGOUT%' else='%LOGIN% %MAKETEXT{"or"}% [[%SYSTEMWEB%.UserRegistration][%MAKETEXT{"Register"}%]]'}%%TMPL:END%
 
-%{ app-style page layout }%
-%{ additional style }%
-%TMPL:DEF{"templatestyle"}%%TMPL:END%
-%{ title string in page: }%
-%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
+%{ app-style page layout }%%{ additional style }%%TMPL:DEF{"templatestyle"}%%TMPL:END%
+
+%{ title string in page: }%%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
 %TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
