Item1656: remove newlines that are causing empty paragraphs
git-svn-id: http://svn.foswiki.org/trunk@3967 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -107,10 +107,8 @@
 %{ app-style page layout }%
 %{ additional style }%
 %TMPL:DEF{"templatestyle"}%%TMPL:END%
-%{ title string in page: }%
-%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
+
+%{ title string in page: }%%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
 %TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
 
-%{ formatting macros }%
-%{ webListIndent - used in WEBLIST }%
-%TMPL:DEF{"webListIndent"}%<span class='foswikiWebIndent'></span>%TMPL:END%
+%{ formatting macros }%%{ webListIndent - used in WEBLIST }%%TMPL:DEF{"webListIndent"}%<span class='foswikiWebIndent'></span>%TMPL:END%
