Item2882: change template oopsmore to more
git-svn-id: http://svn.foswiki.org/trunk@3996 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/rdiff.tmpl
+++ b/core/templates/rdiff.tmpl
@@ -6,7 +6,7 @@
 
 %TMPL:DEF{"topicactionbuttons"}% <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%">View</a>
  %TMPL:P{"sep"}% %TMPL:P{"revisions"}%
- %TMPL:P{"sep"}% <a href="%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%?template=oopsmore&amp;param1=%MAXREV%&amp;param2=%CURRREV%" rel='nofollow'>More</a> %TMPL:END%
+ %TMPL:P{"sep"}% <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=more&amp;param1=%MAXREV%&amp;param2=%CURRREV%" rel='nofollow'>More</a> %TMPL:END%
 
 
 %TMPL:DEF{"searchbody"}%%TMPL:P{"repeatedsearchblock"}%%TMPL:END%
