--- a/PatternSkin/templates/rdiff.pattern.tmpl
+++ b/PatternSkin/templates/rdiff.pattern.tmpl
@@ -26,7 +26,7 @@
 
 
 
-%TMPL:DEF{"topicactionbuttons"}%<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%">%MAKETEXT{"View topic"}%</a>%TMPL:P{"sep"}%%TMPL:P{"revisions"}%%TMPL:P{"sep"}%<a href="%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%?template=oopsmore&amp;param1=%MAXREV%&amp;param2=%CURRREV%" rel='nofollow'>%MAKETEXT{"More topic actions..."}%</a>%TMPL:END%
+%TMPL:DEF{"topicactionbuttons"}%<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%">%MAKETEXT{"View topic"}%</a>%TMPL:P{"sep"}%%TMPL:P{"revisions"}%%TMPL:P{"sep"}%<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=more&amp;param1=%MAXREV%&amp;param2=%CURRREV%" rel='nofollow'>%MAKETEXT{"More topic actions..."}%</a>%TMPL:END%
 
 
 
