Item1673: Mising Content-Type (thanks Foswiki:Main.PetrMatejka)
git-svn-id: http://svn.foswiki.org/trunk@4000 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/mailresetpassword.tmpl
+++ b/core/templates/mailresetpassword.tmpl
@@ -1,6 +1,9 @@
 %{ This is a default template }%From: %WIKIWEBMASTERNAME% <%WIKIWEBMASTER%>
 To: %FIRSTLASTNAME% <%EMAILADDRESS%>
 Subject: %MAKETEXT{"Foswiki password reset for [_1]" args="%WIKINAME%"}%
+MIME-Version: 1.0
+Content-Type: text/plain; charset=%CHARSET%
+Content-Transfer-Encoding: 8bit
 
 %MAKETEXT{"Dear [_1]" args="%WIKINAME%"}%
 
