Item1706: fixing twisty in jquery mode when JQueryPlugin is in noconflict mode
git-svn-id: http://svn.foswiki.org/trunk@4072 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TwistyPlugin/templates/twistyplugin.jquery.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.jquery.tmpl
@@ -1,9 +1,7 @@
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%<style type="text/css" media="all">
-@import url("%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.css");
-</style>
-<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js"></script>
-<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
-<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>
+%TMPL:DEF{twisty:header}%<link rel="stylesheet" href="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.css" type="text/css" media="all" />
+<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js"></script>
+<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
+<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>
 %TMPL:END%
