Item1714: de-twikify CSS class
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4111 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/search.tmpl
+++ b/core/templates/search.tmpl
@@ -9,17 +9,17 @@
 
 %TMPL:DEF{"searched"}%%MAKETEXT{"Searched:"}% <b> %SEARCHSTRING% </b>%TMPL:END%
 
-%TMPL:DEF{"header"}%<div class="twikiSearchResult">
+%TMPL:DEF{"header"}%<div class="foswikiSearchResult">
 <div class="foswikiTopRow" style="backgroundcolor:%WEBBGCOLOR%;">
 <div class="foswikiLeft"><b>%MAKETEXT{"Topics in [_1] web" args="<nop>%WEB%"}%</b></div>
 <div class="foswikiRight foswikiSRAuthor"><b>%MAKETEXT{"Changed"}%</b></div>
 <div class="foswikiRight foswikiSRRev"><b>%MAKETEXT{"Changed by"}%</div>
 <br class="foswikiClear" /></div><!--/foswikiTopRow-->
-</div><!--/twikiSearchResult-->%TMPL:END%
+</div><!--/foswikiSearchResult-->%TMPL:END%
 
 %TMPL:DEF{"count"}%</table><br clear="all" /> %BR% Number of topics: <b>%NTOPICS%</b>%TMPL:END%
 
-%TMPL:DEF{"result"}%<div class="twikiSearchResult">
+%TMPL:DEF{"result"}%<div class="foswikiSearchResult">
 <div class="foswikiTopRow">
 <div class="foswikiLeft"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a></div>
 <div class="foswikiRight foswikiSRAuthor"> %AUTHOR%</div>
@@ -28,7 +28,7 @@
 <div class="foswikiBottomRow">
 <div class="foswikiSummary foswikiGrayText">%TEXTHEAD%</div><!--/foswikiSummary-->
 </div><!--/foswikiBottomRow-->
-</div><!--/twikiSearchResult-->%TMPL:END%
+</div><!--/foswikiSearchResult-->%TMPL:END%
 
 
 %TMPL:DEF{"content"}%%SPLIT%%TMPL:P{"searched"}%%SPLIT%%TMPL:P{"header"}%%REPEAT%%TMPL:P{"result"}%%REPEAT%%SPLIT%%TMPL:P{"count"}%%SPLIT%%TMPL:END%
