Item1738: if font tag is used, make text readable again
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4168 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/default.css
+++ b/core/pub/System/SkinTemplates/default.css
@@ -88,6 +88,9 @@ blockquote {
 	padding:1em;
 	background:#fff;
 }
+.foswikiPage font {
+	line-height:135%;
+}
 .foswikiNewLink font {
 	color:inherit;
 }
