Item1568: Remove text that comforts users into thinking clicking button is always followed by OK situation. Brief and accurate is better.
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4196 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/validate.tmpl
+++ b/core/templates/validate.tmpl
@@ -17,7 +17,7 @@
 
 %MAKETEXT{"It can also be caused by someone trying to use your identity to change content on [_1] without your knowledge." args="<nop>%WIKITOOLNAME%"}%
 
-%MAKETEXT{"Press OK to confirm that this change was intentional - e.g you had clicked a button on a [_1] page just before this message came up." args="<nop>%WIKITOOLNAME%"}%
+%MAKETEXT{"Press OK to confirm that this change was intentional."}%
 
 %MAKETEXT{"Press Cancel otherwise."}%</div></div><!-- /foswikiFormStep-->%TMPL:END%
 
