--- a/core/templates/validate.tmpl
+++ b/core/templates/validate.tmpl
@@ -5,21 +5,24 @@
 %TMPL:DEF{"pagetitle"}%%TMPL:END%
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"([_1] validation)" args="<nop>%WIKITOOLNAME%"}%%TMPL:END%
 
-%TMPL:DEF{"title"}%---++ %MAKETEXT{"Confirmation required"}%
+%TMPL:DEF{"title"}%---++ %MAKETEXT{"Warning! Confirmation required"}%
 %TMPL:END%
 
 %TMPL:DEF{"titlestep"}%<div class="foswikiFormStep">
 %TMPL:P{"title"}%
 <div style="display:block">
-%MAKETEXT{"[_1] has detected a suspicious request to change a page." args="<nop>%WIKITOOLNAME%"}%
+%MAKETEXT{"[_1] has received a suspicious change request from your browser." args="<nop>%WIKITOOLNAME%"}%
 
-%MAKETEXT{"It can occur if you use the back button of the browser after saving a page and try to save the same page again."}%
+%MAKETEXT{"There is a risk that someone may be trying to use your identity to change content on [_1] without your knowledge." args="<nop>%WIKITOOLNAME%"}%
 
-%MAKETEXT{"It can also be caused by someone trying to use your identity to change content on [_1] without your knowledge." args="<nop>%WIKITOOLNAME%"}%
+   * %MAKETEXT{"Press OK to confirm that this change was intentional."}%
+   * %MAKETEXT{"Press Cancel otherwise."}%
 
-%MAKETEXT{"Press OK to confirm that this change was intentional."}%
-
-%MAKETEXT{"Press Cancel otherwise."}%</div></div><!-- /foswikiFormStep-->%TMPL:END%
+%MAKETEXT{"If you are unsure what this means, read:"}%
+<a href="http://foswiki.org/Support/WhyYouAreAskedToConfirm" target="_blank">
+%MAKETEXT{"why you are being asked to confirm"}%
+</a>.
+</div></div><!-- /foswikiFormStep-->%TMPL:END%
 
 %TMPL:DEF{"formstart"}%<form action='%SCRIPTURLPATH{"login"}%/%WEB%/%TOPIC%' name='loginform' method='post'>%TMPL:END%
 
