Item8144:   * added jquery.focus, jquery.textboxlist, jquery.farbtastic jquery.gradient   * added =color= and =textboxlist= formfield types   * made JQueryPlugin pluggable itself   * added animation switching tabs   * improved automaxexpand feature in tabs   * performance improvements for ajax helper, i.e. user selector   * improved jquery.empty template for new jquery plugins
git-svn-id: http://svn.foswiki.org/trunk@4286 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/jquery.tabpane.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/jquery.tabpane.uncompressed.css
@@ -15,8 +15,10 @@
 }
 .jqTabContents {
   padding:8px;
+  /*
   overflow-x:hidden;
   overflow-y:auto;
+  */
 }
 ul.jqTabGroup {
   margin:0px !important;
